--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "prodabel/projetocursolaravel",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Primeiro projeto de laravel.",
     "keywords": [
         "framework",
         "laravel"
